--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/funkcionalnosti/DodavanjeProfesora.java=UTF-8
+encoding//src/funkcionalnosti/DodavanjeStudenta.java=UTF-8
