#izmena_studenta pocetak izmene studenta
#student promenjene stavke u Date tip

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/funkcionalnosti/DodavanjeProfesora.java=UTF-8
 encoding//src/funkcionalnosti/DodavanjeStudenta.java=UTF-8
+encoding//src/funkcionalnosti/IzmenaStudenta.java=UTF-8
 encoding//src/modelsistema/TrenutnaGodina.java=UTF-8
