--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/funkcionalnosti/DodavanjeProfesora.java=UTF-8
 encoding//src/funkcionalnosti/DodavanjeStudenta.java=UTF-8
+encoding//src/funkcionalnosti/IzmenaProfesora.java=UTF-8
 encoding//src/funkcionalnosti/IzmenaStudenta.java=UTF-8
 encoding//src/modelsistema/TrenutnaGodina.java=UTF-8
