#student pravljenje AbstractTableModelStudenti
#student pravljenje ButtonColumnStudenti

#student pravljenje StudentiJTable

#student pravljenje StudentiTablePanel

#student StudentiController izmene

#student BazaStudenata izmene

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,5 +3,6 @@ encoding//src/funkcionalnosti/DodavanjeProfesora.java=UTF-8
 encoding//src/funkcionalnosti/DodavanjeStudenta.java=UTF-8
 encoding//src/funkcionalnosti/IzmenaProfesora.java=UTF-8
 encoding//src/funkcionalnosti/IzmenaStudenta.java=UTF-8
+encoding//src/izgledaplikacije/StudentiJTable.java=UTF-8
 encoding//src/modelsistema/BazaStudenata.java=UTF-8
 encoding//src/modelsistema/TrenutnaGodina.java=UTF-8
