#promena Baza: datum util,dodajProfesora konstruktor,dodajPredmet, izmeniPredmet #predmet i profesor serijalizacija #KontrolerProfesor dodavanje util datuma #PredmetiKontroler

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,4 @@
-/izgledaplikacije/
-/controllers/
-/funkcionalnosti/
-/modelsistema/
+/funkcionalnosti
+/controllers
+/modelsistema
+/izgledaplikacije
