--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,5 @@
-/slike
-/controllers
-/funkcionalnosti
-/izgledaplikacije
-/listeners
-/modelsistema
+/funkcionalnosti/
+/izgledaplikacije/
+/listeners/
+/modelsistema/
+/controllers/
