--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk-11.0.5/lib/jrt-fs.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk-11.0.5/lib/src.zip"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_191/lib/charsets.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_191/lib/deploy.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_191/lib/javaws.jar"/>
@@ -12,5 +14,12 @@
 	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_191/lib/plugin.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_191/lib/resources.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_191/lib/rt.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_191/lib/ant-javafx.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_191/lib/dt.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_191/lib/javafx-mx.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_191/lib/jconsole.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_191/lib/packager.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_191/lib/sa-jdi.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_191/lib/tools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
