#menu_bar dodate reakcije na klik
#uklanjanje_studenta_sa_predmeta izmenjena mesta poziva

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,6 @@
-/izgledaplikacije/
-/modelsistema/
-/funkcionalnosti/
 /controllers/
+/funkcionalnosti/
+/izgledaplikacije/
+/listeners/
+/modelsistema/
+/slike/
