#menu_bar dodate dodatne klase za rad Help-a i About-a

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,10 @@ encoding//src/funkcionalnosti/DodavanjeProfesora.java=UTF-8
 encoding//src/funkcionalnosti/DodavanjeStudenta.java=UTF-8
 encoding//src/funkcionalnosti/IzmenaProfesora.java=UTF-8
 encoding//src/funkcionalnosti/IzmenaStudenta.java=UTF-8
+encoding//src/izgledaplikacije/About.java=UTF-8
+encoding//src/izgledaplikacije/HelpMenuBar.java=UTF-8
+encoding//src/izgledaplikacije/HelpTabele.java=UTF-8
+encoding//src/izgledaplikacije/HelpToolbar.java=UTF-8
 encoding//src/izgledaplikacije/MenuBar.java=UTF-8
 encoding//src/izgledaplikacije/StudentiJTable.java=UTF-8
 encoding//src/modelsistema/BazaPredmeta.java=UTF-8
