#dodavanje predmeta i profesora

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,5 @@
-/controllers/
-/funkcionalnosti/
-/izgledaplikacije/
-/listeners/
-/modelsistema/
+/izgledaplikacije
+/listeners
+/modelsistema
+/controllers
+/funkcionalnosti
