#student dodati studenti na predmet u tabelu

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,5 @@
-/izgledaplikacije
-/listeners
-/modelsistema
-/controllers
-/funkcionalnosti
+/controllers/
+/funkcionalnosti/
+/izgledaplikacije/
+/listeners/
+/modelsistema/
