--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,6 @@
-/controllers/
-/funkcionalnosti/
-/izgledaplikacije/
-/listeners/
-/modelsistema/
+/controllers
+/funkcionalnosti
+/izgledaplikacije
+/listeners
+/modelsistema
+/slike
