--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,6 @@
-/controllers
-/funkcionalnosti
-/izgledaplikacije
-/listeners
-/modelsistema
-/slike
+/controllers/
+/funkcionalnosti/
+/izgledaplikacije/
+/listeners/
+/modelsistema/
+/slike/
